Bug 127901 - FILESAVE: PPTX - Image color/graphics modes not correctly exported
Summary: FILESAVE: PPTX - Image color/graphics modes not correctly exported
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:6.4.0 target:6.3.4
Keywords: filter:pptx
: 125409 129351 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-10-01 10:54 UTC by Xisco Faulí
Modified: 2019-12-30 04:46 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2019-10-01 10:54:42 UTC
Issue found while investigating bug 79007

Steps to reproduce:
1. Open attachment 154658 [details] from bug 79007
2. Save it as .PPTX
3. Open it again

-> Observed behaviour: Grayscale, back/white and watermark color modes are gone

Reproduced in

Version: 6.4.0.0.alpha0+
Build ID: 49a634425f0d433541f8309f2575c8bdfd67afbe
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: en-US (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

The DOCX part was implemented in https://cgit.freedesktop.org/libreoffice/core/commit/?id=0db96caf0fcce09b87621c11b584a6d81cc7df86 and https://cgit.freedesktop.org/libreoffice/core/commit/?id=d151ed35ad4c4e7aa9fbb807930fcf91dea2eba7

see bug 87539
Comment 1 Xisco Faulí 2019-10-01 15:40:33 UTC
*** Bug 125409 has been marked as a duplicate of this bug. ***
Comment 2 Commit Notification 2019-10-02 09:32:00 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cb5eaa791739865d54b381c16c60224c432171dc

tdf#127901: pptx export image greyscale, watermark, black/white

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2019-10-18 09:15:30 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/commit/ff2f0e839f7b7ef5e79b8ec4311c971c0e8053f9

tdf#127901: pptx export image greyscale, watermark, black/white

It will be available in 6.3.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2019-12-27 15:44:29 UTC
*** Bug 129351 has been marked as a duplicate of this bug. ***
Comment 5 cgibb20 2019-12-30 04:46:54 UTC
My submission was marked dup of this one,

I can confirm fixed in 6.3.4.2