tdf#127901: pptx export image greyscale, watermark, black/white

Similar to 0db96caf0fcce09b87621c11b584a6d81cc7df86

Change-Id: I5c3ec17c7a3472629ba8a63ab500175add36ee8e
Reviewed-on: https://gerrit.libreoffice.org/79994
Tested-by: Jenkins
Reviewed-by: Xisco Faulí <xiscofauli@libreoffice.org>
(cherry picked from commit cb5eaa791739865d54b381c16c60224c432171dc)